--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.0",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
